docs/i18n/ko/docusaurus-plugin-content-docs/version-4.9.2/api/AxesController.mdx
---
custom_edit_url: null
---

<div className="notification is-warning my-2">⚠️ This class is for <strong>internal</strong> use only.</div>

```ts
class AxesController
```

<div>

</div>

[@egjs/axes](https://naver.github.io/egjs-axes/)의 이벤트를 처리하는 컨트롤러 컴포넌트

<div className="container">
  <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
  <div className="row"><div className="col col--6"><a href="#axes">axes</a><br/><a href="#stateMachine">stateMachine</a><br/><a href="#state">state</a><br/><a href="#animatingContext">animatingContext</a><br/><a href="#controlParams">controlParams</a><br/><a href="#enabled">enabled</a><br/><a href="#position">position</a><br/><a href="#range">range</a><br/><a href="#bounce">bounce</a></div><div className="col col--6"><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#enable">enable</a><br/><a href="#disable">disable</a><br/><a href="#release">release</a><br/><a href="#update">update</a><br/><a href="#addPreventClickHandler">addPreventClickHandler</a><br/><a href="#removePreventClickHandler">removePreventClickHandler</a><br/><a href="#animateTo">animateTo</a></div></div>
</div>

## Properties

### axes {#axes}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

[Axes](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html)의 인스턴스

**Type**: Axes

**See**:
- https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html

### stateMachine {#stateMachine}

<div>

</div>

### state {#state}

<div>

</div>

현재 활성화된 [State](State) 인스턴스로 사용자 입력 또는 애니메이션 상태를 나타냅니다

**Type**: [State](State)

### animatingContext {#animatingContext}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

현재 재생중인 애니메이션 정보

**Type**: object

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|start|number|애니메이션 시작 지점|
|end|number|애니메이션 끝 지점|
|offset|number|카메라 오프셋|

### controlParams {#controlParams}

<div>

</div>

활성화된 현재 Axes 패러미터들

**Type**: [ControlParams](ControlParams)

**Returns**: [ControlParams](ControlParams)

### enabled {#enabled}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

현재 사용자 입력이 활성화되었는지를 나타내는 값

**Type**: boolean

### position {#position}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

[Axes](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html) 인스턴스 내부의 현재 좌표 값

**Type**: number

### range {#range}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

[Axes](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html) 인스턴스 내부의 현재 이동 범위 값

**Type**: Array&lt;number&gt;

### bounce {#bounce}

<div>
  <span className="badge badge--warning">readonly</span>
</div>

적용된 bounce 크기(px 단위)

**Type**: Array&lt;number&gt;

## Methods

### init {#init}

<div>

</div>

AxesController를 초기화합니다

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|flicking|[Flicking](Flicking)|||An instance of Flicking|

### destroy {#destroy}

<div>

</div>

AxesController를 초기 상태로 되돌립니다

**Returns**: void

### enable {#enable}

<div>

</div>

사용자의 입력(마우스/터치)를 활성화합니다

**Returns**: this

### disable {#disable}

<div>

</div>

사용자의 입력(마우스/터치)를 막습니다

**Returns**: this

### release {#release}

<div>

</div>

사용자의 현재 입력(마우스/터치)를 중단시킵니다

**Returns**: this

### update {#update}

<div>

</div>

[@egjs/axes](https://naver.github.io/egjs-axes/)의 상태를 갱신합니다

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|controlParams|[ControlParams](ControlParams)||||

**Throws**: [FlickingError](FlickingError)

[init](AxesController#init)이 이전에 호출되지 않은 경우

### addPreventClickHandler {#addPreventClickHandler}

<div>

</div>

카메라 엘리먼트에 애니메이션 도중에 클릭 이벤트를 방지하는 핸들러를 부착합니다

**Returns**: this

### removePreventClickHandler {#removePreventClickHandler}

<div>

</div>

카메라 엘리먼트에 애니메이션 도중에 클릭 이벤트를 방지하는 핸들러를 탈착합니다

**Returns**: this

### animateTo {#animateTo}

<div>

</div>

Axes의 [setTo](https://naver.github.io/egjs-axes/release/latest/doc/eg.Axes.html#setTo) 메소드를 주어진 좌표를 이용하여 수행합니다

**Returns**: Promise&lt;void&gt;
- 해당 좌표 도달시에 resolve되는 Promise

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|position|number|||이동할 좌표|
|duration|number|||애니메이션 진행 시간 (단위: ms)|
|axesEvent|number|✔️||이 값이 주어졌을 경우, 해당 이벤트의 [setTo](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#setTo) 메소드를 대신해서 사용합니다.|

**Throws**: [FlickingError](FlickingError)

<br /><br />|code|condition|<br />|---|---|<br />|[NOT_ATTACHED_TO_FLICKING](ERROR_CODE)|[init](Control#init)이 이전에 호출되지 않은 경우|<br />|[ANIMATION_INTERRUPTED](ERROR_CODE)|사용자 입력에 의해 애니메이션이 중단된 경우|<br /><br />

